--- a/跨域/demo1.html
+++ b/跨域/demo1.html
@@ -39,7 +39,7 @@
   let btn4 = document.getElementById("btn4");
   btn4.onclick = async () => {
     let link = document.createElement("link");
-    link.href = "http://127.0.0.1:9000/getImg";
+    link.href = "http://127.0.0.1:9000/getData";
     link.rel = "stylesheet";
     document.head.appendChild(link);
     setTimeout(() => {
