--- a/跨域/demo1.html
+++ b/跨域/demo1.html
@@ -47,4 +47,5 @@
     }, 2000);
   };
 </script>
+<!-- 使用demo12.js起服务 -->
 <!-- 我这边是通过vscode的live-server插件起服务打开文件，端口自己设置的8088，http://127.0.0.1:8088/跨域/demo1.html -->
