--- a/跨域/demo4.html
+++ b/跨域/demo4.html
@@ -1,3 +1,4 @@
+<!-- 表单跨域提交和服务器代理跨域 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,5 +13,20 @@
       password:<input type="password" name="password" /> <br />
       <input type="submit" value="登录" />
     </form>
+    <br />
+    <button id="btn1">服务器代理跨域</button>
   </body>
 </html>
+<script src="./axios.min.js"></script>
+<script>
+  var btn1 = document.getElementById("btn1");
+  btn1.onclick = async () => {
+    try {
+      let res = await axios.get("http://127.0.0.1:7000/getData");
+      console.log(res);
+    } catch (e) {
+      console.error(e);
+    }
+  };
+</script>
+<!-- 使用demo4.js起服务 -->
