--- a/跨域/demo2.html
+++ b/跨域/demo2.html
@@ -1,3 +1,4 @@
+<!-- script标签跨域请求 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,3 +26,4 @@
     console.log(data);
   };
 </script>
+<!-- 使用demo12.js起服务 -->
