--- a/跨域/demo3.html
+++ b/跨域/demo3.html
@@ -1,3 +1,4 @@
+<!-- cors跨域请求 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,3 +25,4 @@
     console.log(res);
   };
 </script>
+<!-- 使用demo3.js起服务 -->
